Fix slider bug [CLOUDFRONT-10185]
Squashed commit of the following:

commit 847637b4a393b743cf5d350f5b36d539927b3ce3
Merge: 7863611 6d44a62
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu Jun 2 12:16:52 2022 +0300

    Merge branch 'master' of ssh://bb.yandex-team.ru/data-ui/page-constructor into aeksandla/CLOUDFRONT-10185/slide-bug

commit 7863611acddfd783587783febbbf1079313983a3
Merge: fdc4a55 0642a0e
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 26 11:18:55 2022 +0300

    Merge branch 'master' of ssh://bb.yandex-team.ru/data-ui/page-constructor into aeksandla/CLOUDFRONT-10185/slide-bug

commit fdc4a555b132f2ffa152372d448ed805e18c3afb
Author: aeksandla <aeksandla@yandex-team.ru>
Date:   Thu May 26 11:18:02 2022 +0300

    Fix slide bug [CLOUDFRONT-10185]

--- a/src/blocks/Slider/Slider.scss
+++ b/src/blocks/Slider/Slider.scss
@@ -300,7 +300,6 @@ $block: '.#{$ns}SliderBlock';
 
             .slick-slide {
                 padding: 0 $slideOffset;
-                max-width: calc(100vw - (#{$indentXS} + #{$indentS}));
 
                 &:last-child {
                     padding: 0 $indentXS 0 $slideOffset;
